# SQuery

./: CMakeLists.txt  README.md  SQueryConfig.cmake
cmake/: options.cmake  utils.cmake
diagrams/: SQuery.xmi
include/SQuery/: sclausebuilder.h  sconfig.h  sdeletequerybuilder.h  sglobal.h  sinsertquerybuilder.h  snamespace.h  squery.h  squerybuilder.h  sselectquerybuilder.h  supdatequerybuilder.h
lib/: squery.exp
src/: CMakeLists.txt
src/global/: CMakeLists.txt  snamespace.cpp  snamespace.h  squery.h
src/kernel/: CMakeLists.txt  sconfig.h  sconfig.h.in  sglobal.h
src/query/: CMakeLists.txt  sdeletequerybuilder.cpp  sdeletequerybuilder.h  sdeletequerybuilder_p.h  sinsertquerybuilder.cpp  sinsertquerybuilder.h  sinsertquerybuilder_p.h  squerybuilder.cpp  squerybuilder.h  squerybuilder_p.h  sselectquerybuilder.cpp  sselectquerybuilder.h  sselectquerybuilder_p.h  supdatequerybuilder.cpp  supdatequerybuilder.h  supdatequerybuilder_p.h
tests/: CMakeLists.txt
tests/kernel/: CMakeLists.txt  main.cpp
tests/query/: CMakeLists.txt  sdeletequerybuildertest.cpp  sinsertquerybuildertest.cpp  squerybuildertest.cpp  squerybuildertest.h  sselectquerybuildertest.cpp  supdatequerybuildertest.cpp
